# HnswLite

./: CHANGELOG.md  HNSW Index.postman_collection.json  README.md  REST_API.md  build-dashboard.bat  build-server.bat  publish-nuget.bat  run-tests.bat  run-tests.sh
archive/: METADATA_FILTERS.md  PERFORMANCE_IMPROVEMENTS.md
assets/: logo.pptx
dashboard/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  index.css
docker/: README.md  compose.yaml
docker/factory/: reset.bat  reset.sh
docker/hnswlite/: hnswindex.json
sdk/: README.md
sdk/csharp/: README.md
sdk/js/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/hnswlite/: __init__.py  client.py  exceptions.py  models.py
sdk/python/tests/: test_integration.py
src/: CLAUDE.md  Dockerbuild.bat  Dockerbuild.sh  HnswLite.sln  PERFORMANCE_IMPROVEMENTS.md
src/.claude/: settings.local.json
src/Docker/: Dockerrun.bat  Dockerrun.sh  hnswindex.json
src/HnswIndex.RamStorage/: HnswIndex.RamStorage.csproj  HsnwIndex.RamStorage.xml  RamHnswLayerStorage.cs  RamHnswNode.cs  RamHnswStorage.cs  RamStorageProvider.cs
src/HnswIndex.Server/: API-TESTING.md  Dockerfile  HnswIndex.Server.csproj  HnswIndexServer.cs  clean.bat  clean.sh  test-api.bat  test-api.md  test-api.ps1  test-api.sh
src/HnswIndex.SqliteStorage/: HnswIndex.SqliteStorage.csproj  HsnwIndex.SqliteStorage.xml  SqliteHnswLayerStorage.cs  SqliteHnswNode.cs  SqliteHnswStorage.cs  (+1 more)
(+128 files in other folders)
