[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hnswlite-sdk"
version = "1.1.0"
description = "Python SDK for the HnswLite REST API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/jchristn/HnswLite"

[tool.setuptools.packages.find]
include = ["hnswlite*"]
